[package]
name = "disruptor-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add your project dependencies here, for example:
# serde = { version = "1.0", features = ["derive"] }
disruptor = "3.2.0"

[dev-dependencies]
# Add your development dependencies here, for example:
# assert_cmd = "2.0"

[profile.release]
# Optimize for release builds
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
# Optimize for compile time in development
split-debuginfo = "unpacked"